# tmpmail

./: .editorconfig  Dockerfile  Makefile  mypy.ini  pyproject.toml  pytest.ini
tests/: test_lmtp_queue.py
tmpmail/: __init__.py  __main__.py  config.py  entrypoint.py  lmtp.py  websocket.py
tmpmail/web_static/: index.html  script.js  styles.css
