[tool.poetry]
name = "tmpmail"
version = "0.1.0"
description = "Temporary email service"
authors = ["Terry Kerr <terry@oefd.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
aiosmtpd = "^1.2"
trafaret = "^2.0.2"
janus = "^0.4.0"
pytest-asyncio = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"
isort = "^4.3.21"
pytest = "^5.4.1"
pytest-black = "^0.3.8"
pytest-mypy = "^0.6.1"
pytest-isort = "^0.3.1"
pytest-flake8 = "^1.0.4"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

